[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.762, 27.8832 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 29.6092, 30.0845 )

[node name="fase_1" type="Node2D"]

[node name="personagem" type="KinematicBody2D" parent="."]
position = Vector2( 239.1, 121.308 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="gameover" type="AcceptDialog" parent="personagem"]
margin_left = -239.1
margin_top = -121.308
margin_right = -156.1
margin_bottom = -63.308

[node name="HTTPRequest" type="HTTPRequest" parent="personagem"]

[node name="Sprite" type="Sprite" parent="personagem"]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="personagem"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="personagem/Area2D"]
shape = SubResource( 1 )

[node name="placar" type="Label" parent="personagem"]
margin_left = -26.2714
margin_top = -49.6765
margin_right = 13.7286
margin_bottom = -35.6765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
modulate = Color( 1, 0.00784314, 0.00784314, 1 )
position = Vector2( 342.814, 170.047 )
collision_layer = 4
collision_mask = 4
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )
[connection signal="confirmed" from="personagem/gameover" to="personagem" method="_on_gameover_confirmed"]
[connection signal="request_completed" from="personagem/HTTPRequest" to="personagem" method="_on_HTTPRequest_request_completed"]
[connection signal="body_entered" from="personagem/Area2D" to="personagem" method="_on_Area2D_body_entered"]
